--- a/README
+++ b/README
@@ -68,4 +68,4 @@ See License file.
 
 --== Support / Praise ==--
 
-Please write: Sean Canton < eighteyes (at) gmail.com >
+Please write: Sean Canton < sean (at) 8isc.com >
